--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,6 @@ production:
   database: like_note_production
   username: like_note
   password: <%= ENV['LIKE_NOTE_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
